<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_vehicle"
        android:icon="@drawable/ic_tickets"
        android:title="@string/title_vehicle" />

    <item
        android:id="@+id/navigation_ticket"
        android:icon="@drawable/ic_tickets"
        android:title="@string/title_ticket" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_users_list"
        android:title="@string/title_user" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/title_profile" />

</menu>