<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.authentication.LoginActivity"
    android:paddingHorizontal="24dp"
    android:paddingVertical="48dp">


    <ImageView
        android:layout_width="94dp"
        android:layout_height="87dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_person" />

    <EditText
        android:id="@+id/etNombreS"
        style="@style/FormEditText"
        android:layout_marginBottom="24dp"
        android:autofillHints="name"
        android:background="@drawable/status_default"
        android:drawableStart="@drawable/ic_user"
        android:drawableTint="@color/gray"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baloo2_regular"
        android:hint="@string/nameSeller"
        android:inputType="text" />

    <!-- Cuando este lleno con un dato y se pase a otro label, activar este color
     android:drawableTint="@color/black"

     Cuando este focus el label, activar este estilo y color al icono
     android:background="@drawable/status_acti"
     android:drawableTint="@color/primary"
     -->

    <EditText
        android:id="@+id/etEmailS"
        style="@style/FormEditText"
        android:layout_marginBottom="24dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/status_default"
        android:drawableStart="@drawable/sms_icon"
        android:drawableTint="@color/gray"
        android:fontFamily="@font/baloo2_regular"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />


    <EditText
        android:id="@+id/etpasswS"
        style="@style/FormEditText"
        android:layout_marginBottom="24dp"
        android:autofillHints="password"
        android:background="@drawable/status_default"
        android:drawableStart="@drawable/lock_icon"
        android:drawableTint="@color/gray"
        android:fontFamily="@font/baloo2_regular"
        android:hint="@string/contrase_a"
        android:inputType="textPassword" />

    <Spinner
        android:id="@+id/roles"
        style="@style/FormEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/status_default"
        android:entries="@array/roles"
        android:spinnerMode="dropdown" />


</LinearLayout>