<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.ForgotPasswordActivity"
    android:background="@color/white"
    android:paddingBottom="18dp"
    android:paddingTop="10dp"
    android:windowSoftInputMode="adjustResize"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:paddingHorizontal="24dp">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_back"
            android:clickable="true"
            android:onClick="goBack"
            android:focusable="true" />
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/olvid_mi_contrase_a"
            android:fontFamily="@font/baloo2_bold"
            android:textColor="@color/black"
            android:textSize="@dimen/subtitle"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_forgot_password"
            android:layout_gravity="center"
            android:layout_marginTop="24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ingrese su correo electrónico para enviarle un código de recuperación de contraseña."
            android:fontFamily="@font/baloo2_regular"
            android:textColor="@color/black"
            android:textSize="@dimen/body"
            android:layout_gravity="center"
            android:paddingBottom="16dp"/>

        <LinearLayout
            android:id="@+id/llEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp"
            android:paddingHorizontal="15dp"
            android:background="@drawable/border_gray"
            android:layout_marginVertical="16dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_email_gradient"
                android:background="@drawable/round_background"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:padding="12dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/via_email"
                    android:fontFamily="@font/baloo2_regular"
                    android:textColor="@color/black"
                    android:textSize="@dimen/body"
                    android:layout_gravity="center"/>
                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/ingrese_su_correo_electr_nico"
                    android:fontFamily="@font/baloo2_regular"
                    android:textColor="@color/black"
                    android:textSize="@dimen/body"
                    android:layout_gravity="center" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnContinue"
        style="@style/FormButtonInactive"
        android:focusable="true"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:onClick="sendCode"
        android:clickable="true">

        <TextView
            android:id="@+id/tvLogin"
            style="@style/TextDefault"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="@font/baloo2_bold"
            android:text="@string/continuar"
            android:textSize="@dimen/body" />
    </LinearLayout>

</LinearLayout>