<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.UserFragment">

    <LinearLayout
        android:id="@+id/usersLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Crear Usuario"
            android:id="@+id/btntoCreate"
            android:layout_gravity="end"
            />
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </LinearLayout>




    <LinearLayout
        android:id="@+id/layoutCreateUser"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <ImageView
            android:layout_width="94dp"
            android:layout_height="87dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_person" />

        <EditText
            android:id="@+id/idUser"
            style="@style/FormEditText"
            android:layout_marginBottom="24dp"
            android:autofillHints="name"
            android:background="@drawable/status_default"
            android:drawableStart="@drawable/ic_person"
            android:drawableTint="@color/gray"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/baloo2_regular"
            android:hint="cedula"
            android:inputType="text" />

        <EditText
            android:id="@+id/etNombreS"
            style="@style/FormEditText"
            android:layout_marginBottom="24dp"
            android:autofillHints="name"
            android:background="@drawable/status_default"
            android:drawableStart="@drawable/ic_person"
            android:drawableTint="@color/gray"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/baloo2_regular"
            android:hint="@string/nameSeller"
            android:inputType="text" />

        <!-- Cuando este lleno con un dato y se pase a otro label, activar este color
         android:drawableTint="@color/black"

         Cuando este focus el label, activar este estilo y color al icono
         android:background="@drawable/status_acti"
         android:drawableTint="@color/primary"
         -->

        <EditText
            android:id="@+id/etEmailS"
            style="@style/FormEditText"
            android:layout_marginBottom="24dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/status_default"
            android:drawableStart="@drawable/sms_icon"
            android:drawableTint="@color/gray"
            android:fontFamily="@font/baloo2_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />


        <EditText
            android:id="@+id/etpasswS"
            style="@style/FormEditText"
            android:layout_marginBottom="24dp"
            android:autofillHints="password"
            android:background="@drawable/status_default"
            android:drawableStart="@drawable/lock_icon"
            android:drawableTint="@color/gray"
            android:fontFamily="@font/baloo2_regular"
            android:hint="@string/contrase_a"
            android:inputType="textPassword" />

        <Spinner
            android:id="@+id/roles"
            style="@style/FormEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/status_default"
            android:entries="@array/roles"
            android:spinnerMode="dropdown"
            />

        <LinearLayout
            android:id="@+id/btnCreateUser"
            style="@style/FormButtonInactive"
            android:focusable="true"
            android:layout_gravity="center"
            android:layout_marginHorizontal="24dp"
            android:clickable="true"
            >
            <!-- Aplicar cuando los campos esten llenos
            style="@style/FormButtonActive"

            -->

            <TextView
                style="@style/TextDefault"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="@font/baloo2_bold"
                android:text="Crear user"
                android:textSize="@dimen/body"
                />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>